# logo-vectorizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: make_sample.py
tests/: conftest.py  test_assembler.py  test_color_utils.py  test_exporters.py  test_pipeline.py  test_preprocessor.py  test_quantizer.py  test_separator.py  test_shapes.py  test_smoother.py  test_svg_utils.py  test_tracer.py
vectorizer/: __init__.py  arcs.py  assembler.py  cli.py  pipeline.py  preprocessor.py  quantizer.py  separator.py  shapes.py  smoother.py  tracer.py
vectorizer/exporters/: __init__.py  ai.py  eps.py
vectorizer/utils/: __init__.py  color.py  image_utils.py  svg_utils.py
web/: app.py
web/static/: index.html
