[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logo-vectorizer"
version = "1.0.0"
description = "Convert raster logos (PNG/JPEG) to high-quality vector graphics (SVG, EPS, AI)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Logo Vectorizer" }]
dependencies = [
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "vtracer>=0.6",
    "svgpathtools>=1.6",
    "lxml>=4.9",
    "svglib>=1.5",
    "cairosvg>=2.7",
    "click>=8.1",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "python-multipart>=0.0.6",
]

[project.scripts]
vectorize = "vectorizer.cli:main"

[tool.setuptools.packages.find]
include = ["vectorizer*"]
